--- a/{{cookiecutter.name}}/.gitignore
+++ b/{{cookiecutter.name}}/.gitignore
@@ -1,3 +1,25 @@
-.stack-work/
-*.cabal
+build
+build_current
+cmake_build
 
+# Compiled Object files
+*.slo
+*.lo
+*.o
+
+# Compiled Dynamic libraries
+*.so
+
+# Compiled Static libraries
+*.lai
+*.la
+*.a
+
+# Python
+*.pyc
+
+# Compiled Doxygen documentation
+/doxygen/html
+
+# Visual Studio Code
+.vscode
